crates/java-syntax/src/snapshots/java_parser__lexer__tests__error_invalid_numbers-3.snap
---
source: crates/java-syntax/src/lexer.rs
expression: "lex_errors(\"0._1f\")"
---
[
    InvalidNumber,
]
