crates/java-syntax/src/snapshots/java_parser__lexer__tests__error_invalid_unicode_escapes-2.snap
---
source: crates/java-syntax/src/lexer.rs
expression: "lex_errors(\"int \\\\u006G = 1;\")"
---
[
    UnexpectedChar(
        '\\',
    ),
    InvalidUnicodeEscape,
]
