crates/java-syntax/src/snapshots/java_parser__lexer__tests__error_unterminated_comment.snap
---
source: crates/java-syntax/src/lexer.rs
expression: "lex_errors(\"/* this block comment never ends \")"
---
[
    UnterminatedComment,
]
