crates/java-syntax/src/snapshots/java_parser__lexer__tests__error_unterminated_string.snap
---
source: crates/java-syntax/src/lexer.rs
expression: "lex_errors(\"\\\"this string has no end\")"
---
[
    UnterminatedString,
]
