crates/java-syntax/src/snapshots/java_parser__lexer__tests__escape_sequence_s-2.snap
---
source: crates/java-syntax/src/lexer.rs
expression: lex_tokens(text_block)
---
[
    (
        TextBlock,
        "\"\"\"\n    line 1\\s\n    line 2\n\"\"\"",
    ),
    (
        Whitespace,
        "\n",
    ),
]
