crates/java-syntax/src/snapshots/java_parser__lexer__tests__escape_sequence_s.snap
---
source: crates/java-syntax/src/lexer.rs
expression: "lex_tokens(r#\" \"trailing space\\s\" \"#)"
---
[
    (
        Whitespace,
        " ",
    ),
    (
        StringLiteral,
        "\"trailing space\\s\"",
    ),
    (
        Whitespace,
        " ",
    ),
]
