crates/java-syntax/src/snapshots/java_parser__lexer__tests__integer_literals-2.snap
---
source: crates/java-syntax/src/lexer.rs
expression: "lex_tokens(\"0x0 0x1A2B 0XCAFE_BABE 0xFFl\")"
---
[
    (
        NumberLiteral,
        "0x0",
    ),
    (
        Whitespace,
        " ",
    ),
    (
        NumberLiteral,
        "0x1A2B",
    ),
    (
        Whitespace,
        " ",
    ),
    (
        NumberLiteral,
        "0XCAFE_BABE",
    ),
    (
        Whitespace,
        " ",
    ),
    (
        NumberLiteral,
        "0xFFl",
    ),
]
