crates/java-syntax/src/snapshots/java_parser__lexer__tests__integer_literals.snap
---
source: crates/java-syntax/src/lexer.rs
expression: "lex_tokens(\"0 123 1_000_000 456L\")"
---
[
    (
        NumberLiteral,
        "0",
    ),
    (
        Whitespace,
        " ",
    ),
    (
        NumberLiteral,
        "123",
    ),
    (
        Whitespace,
        " ",
    ),
    (
        NumberLiteral,
        "1_000_000",
    ),
    (
        Whitespace,
        " ",
    ),
    (
        NumberLiteral,
        "456L",
    ),
]
